# pixycam_nodejs

./: .gitignore  CMakeLists.txt  README.md  index.js  package.json
cmake/: Findlibpixy_cam.cmake
src/: snap.cpp
